# dtrexp-py

./: .gitignore  LICENSE  README.md  pyproject.toml
src/dtrexp/: __init__.py  checks.py  errors.py  evaluator.py  fields.py  nodes.py  parser.py
tests/: test_unit.py  test_vectors.py  vectors.json
