[project]
name = "dtrexp"
version = "1.0.1"
description = "DTRExp — Date-Time Range & Recurrence Expression: parsing, validation and coverage evaluation (spec draft 2.8)"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Onur Yıldırım", email = "onur@cutepilot.com" }]
dependencies = []

[project.urls]
Homepage = "https://dtrexp.org"
Repository = "https://github.com/DTRExp/dtrexp-py"
Specification = "https://dtrexp.org/spec/"

[dependency-groups]
dev = [
    "mutmut>=3.6.0",
    "poethepoet>=0.48.0",
    "pytest>=8",
    "pytest-cov>=7.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dtrexp"]

[tool.pytest.ini_options]
testpaths = ["tests"]

# One-command tasks: `uv run poe cover` / `uv run poe mutation`.
[tool.poe.tasks]
cover = "pytest --cov"
mutation = "mutmut run"

[tool.coverage.run]
source = ["dtrexp"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.mutmut]
paths_to_mutate = ["src/dtrexp/"]
tests_dir = ["tests/"]
